--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div id="container">
 	<h1>Vezba</h1>
-<div id="box1"><p id="p1">Sreća</p><section>Moraš se privići na malo tuge u životu. Nećeš znati šta je prava sreća, ako je ne budeš imao sa čime uporediti.</section></div>
+<div id="box1"><p id="p1">Sreća</p><section>Moraš se privići na malo tuge u životu. Nećeš znati šta je prava sreća.</section></div>
 <div id="box2"><p id="p2">Uspeh</p><section>Uspeh je loš učitelj. Zavede pametne ljude da misle da ne mogu da izgube.</section></div>
 <div id="box3"><p id="p3">Ljubav</p><section>Od ljubavi se ne živi ali se za nju gine. – Srpske poslovice.</section></div>
 </div>
